// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`tskv логирование AskerError 1`] = `
Object {
  "component": "test component",
  "errorCode": "UNEXPECTED_STATUS_CODE",
  "errorUrl": "https://blackbox.yandex.ru/some/handle/?sessionid=a590f",
  "level": "error",
  "message": "UNEXPECTED_STATUS_CODE Unexpected status code {CODE:500} in the response for request %requestId% %timings% https://blackbox.yandex.ru/some/handle/?sessionid=a590f.",
  "statusCode": 500,
  "time": 100,
  "uid": 0,
}
`;

exports[`tskv логирование исключения 1`] = `
Object {
  "component": "test component",
  "errorCode": "UNKNOWN_ERROR",
  "level": "error",
  "message": "UNKNOWN_ERROR Unknown error. test tskv error.",
  "uid": 0,
}
`;

exports[`tskv логирование исключения с запросом и параметрами 1`] = `
Object {
  "component": "test component",
  "errorCode": "UNKNOWN_ERROR",
  "hostname": "disk.yandex.ru",
  "ip": "127.0.0.1",
  "justSomeAdditionalLogOption1": 1,
  "justSomeAdditionalLogOption2": "ddddd",
  "level": "error",
  "message": "UNKNOWN_ERROR Unknown error. test one more tskv error.",
  "method": "POST",
  "originalUrl": "/alala?param=value",
  "query": "{\\"param\\":\\"value\\"}",
  "serviceBody": "{\\"serviceBodyParam1\\":\\"service-body-value-1\\",\\"serviceBodyParam2\\":\\"service-body-value-2\\"}",
  "uid": 123,
  "ycrid": "test-ycrid",
}
`;

exports[`tskv логирование какой-то информации 1`] = `
Object {
  "action": "react-script-load-time",
  "component": "test component",
  "hostname": "disk.yandex.ru",
  "ip": "127.0.0.1",
  "level": "info",
  "method": "POST",
  "originalUrl": "/alala?param=value",
  "time": 999999,
  "uid": 123,
  "ycrid": "test-ycrid",
}
`;

exports[`tskv логирование крита (level=crit) 1`] = `
Object {
  "component": "test component",
  "errorCode": "UNKNOWN_ERROR",
  "hostname": "disk.yandex.ru",
  "ip": "127.0.0.1",
  "level": "crit",
  "message": "UNKNOWN_ERROR Unknown error. ААА! Всё упало!.",
  "method": "POST",
  "originalUrl": "/alala?param=value",
  "uid": 123,
  "ycrid": "test-ycrid",
}
`;

exports[`tskv логирование предупреждения (level=warn) 1`] = `
Object {
  "component": "test component",
  "hostname": "disk.yandex.ru",
  "ip": "127.0.0.1",
  "level": "warn",
  "method": "POST",
  "originalUrl": "/alala?param=value",
  "uid": 123,
  "ycrid": "test-ycrid",
}
`;

exports[`tskv логирование с дополнительными параметрами 1`] = `
Object {
  "component": "test component",
  "from": "127.0.0.1 (disk.yandex.ru)",
  "hostname": "disk.yandex.ru",
  "id": "a72821db-735f-46c0-aab7-da1fc2f37a48",
  "ip": "127.0.0.1",
  "level": "info",
  "method": "POST",
  "originalUrl": "/alala?param=value",
  "uid": 123,
  "ycrid": "test-ycrid",
}
`;

exports[`tskv логирование с постобработкой 1`] = `
Object {
  "component": "test component",
  "errorCode": "UNKNOWN_ERROR",
  "hostname": "disk.yandex.ru",
  "id": "a72821db-735f-46c0-aab7-da1fc2f37a48",
  "ip": "XXX.X.X.X",
  "level": "error",
  "message": "UNKNOWN_ERROR Unknown error. Request https://somebackend/do?login=me&password=XXX failed.",
  "method": "POST",
  "originalUrl": "/alala?param=value",
  "stack": "UNKNOWN_ERROR Terror: Unknown error

    Error: Request https://somebackend/do?login=me&password=XXX failed
",
  "uid": 123,
  "ycrid": "test-ycrid",
}
`;

exports[`tskv логирование сетевого запроса (упавшего, с метаданными) 1`] = `
Object {
  "component": "test component",
  "hostname": "disk.yandex.ru",
  "ip": "127.0.0.1",
  "level": "warn",
  "method": "POST",
  "originalUrl": "/alala?param=value",
  "responseData": "bad bad request",
  "serviceBody": "[object Object]",
  "serviceHost": "mpfs.yandex.net",
  "serviceMethod": "POST",
  "servicePath": "/handle-path",
  "servicePort": 443,
  "serviceProtocol": "https:",
  "serviceQuery": "{\\"with\\":\\"param1\\",\\"also-with\\":\\"param2\\"}",
  "serviceSearch": "with=param1&also-with=param2",
  "serviceUrl": "https:/handle-path?with=param1&also-with=param2",
  "statusCode": 400,
  "time": 50,
  "uid": 123,
  "ycrid": "test-ycrid",
}
`;

exports[`tskv логирование сетевого запроса (успешного, без метаданных) 1`] = `
Object {
  "component": "test component",
  "hostname": "disk.yandex.ru",
  "ip": "127.0.0.1",
  "level": "info",
  "method": "POST",
  "originalUrl": "/alala?param=value",
  "statusCode": 301,
  "uid": 123,
  "ycrid": "test-ycrid",
}
`;

exports[`tskv логирование сетевого запроса (успешного, с метаданными) 1`] = `
Object {
  "component": "test component",
  "hostname": "disk.yandex.ru",
  "ip": "127.0.0.1",
  "level": "info",
  "method": "POST",
  "originalUrl": "/alala?param=value",
  "serviceHost": "mpfs.yandex.net",
  "serviceMethod": "POST",
  "servicePath": "/handle-path",
  "serviceUrl": "https:/handle-path?with=param1&also-with=param2",
  "statusCode": 200,
  "time": 50,
  "uid": 123,
  "ycrid": "test-ycrid",
}
`;
